--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://cartograph-app.herokuapp.com",
   "dependencies": {
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.2",
